backend/grammar/TodoLangGrammar/TodoLangGrammarParser.ts
// Generated from grammar/TodoLangGrammar/TodoLangGrammar.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";


export class TodoLangGrammarParser extends Parser {
	public static readonly ADD = 1;
	public static readonly TODO = 2;
	public static readonly COMPLETE = 3;
	public static readonly STRING = 4;
	public static readonly EOL = 5;
	public static readonly WS = 6;
	public static readonly RULE_todoExpressions = 0;
	public static readonly RULE_addExpression = 1;
	public static readonly RULE_completeExpression = 2;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"todoExpressions", "addExpression", "completeExpression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'ADD'", "'TODO'", "'COMPLETE'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "ADD", "TODO", "COMPLETE", "STRING", "EOL", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TodoLangGrammarParser._LITERAL_NAMES, TodoLangGrammarParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TodoLangGrammarParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "TodoLangGrammar.g4"; }

	// @Override
	public get ruleNames(): string[] { return TodoLangGrammarParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TodoLangGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TodoLangGrammarParser._ATN, this);
	}
	// @RuleVersion(0)
	public todoExpressions(): TodoExpressionsContext {
		let _localctx: TodoExpressionsContext = new TodoExpressionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TodoLangGrammarParser.RULE_todoExpressions);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 9;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === TodoLangGrammarParser.ADD) {
				{
				{
				this.state = 6;
				this.addExpression();
				}
				}
				this.state = 11;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 15;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === TodoLangGrammarParser.COMPLETE) {
				{
				{
				this.state = 12;
				this.completeExpression();
				}
				}
				this.state = 17;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public addExpression(): AddExpressionContext {
		let _localctx: AddExpressionContext = new AddExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TodoLangGrammarParser.RULE_addExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 18;
			this.match(TodoLangGrammarParser.ADD);
			this.state = 19;
			this.match(TodoLangGrammarParser.TODO);
			this.state = 20;
			this.match(TodoLangGrammarParser.STRING);
			this.state = 21;
			this.match(TodoLangGrammarParser.EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public completeExpression(): CompleteExpressionContext {
		let _localctx: CompleteExpressionContext = new CompleteExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TodoLangGrammarParser.RULE_completeExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 23;
			this.match(TodoLangGrammarParser.COMPLETE);
			this.state = 24;
			this.match(TodoLangGrammarParser.TODO);
			this.state = 25;
			this.match(TodoLangGrammarParser.STRING);
			this.state = 26;
			this.match(TodoLangGrammarParser.EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!TodoLangGrammarParser.__ATN) {
			TodoLangGrammarParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(TodoLangGrammarParser._serializedATN));
		}

		return TodoLangGrammarParser.__ATN;
	}

}

export class TodoExpressionsContext extends ParserRuleContext {
	public addExpression(): AddExpressionContext[];
	public addExpression(i: number): AddExpressionContext;
	public addExpression(i?: number): AddExpressionContext | AddExpressionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(AddExpressionContext);
		} else {
			return this.getRuleContext(i, AddExpressionContext);
		}
	}
	public completeExpression(): CompleteExpressionContext[];
	public completeExpression(i: number): CompleteExpressionContext;
	public completeExpression(i?: number): CompleteExpressionContext | CompleteExpressionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(CompleteExpressionContext);
		} else {
			return this.getRuleContext(i, CompleteExpressionContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TodoLangGrammarParser.RULE_todoExpressions; }
}


export class AddExpressionContext extends ParserRuleContext {
	public ADD(): TerminalNode { return this.getToken(TodoLangGrammarParser.ADD, 0); }
	public TODO(): TerminalNode { return this.getToken(TodoLangGrammarParser.TODO, 0); }
	public STRING(): TerminalNode { return this.getToken(TodoLangGrammarParser.STRING, 0); }
	public EOL(): TerminalNode { return this.getToken(TodoLangGrammarParser.EOL, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TodoLangGrammarParser.RULE_addExpression; }
}


export class CompleteExpressionContext extends ParserRuleContext {
	public COMPLETE(): TerminalNode { return this.getToken(TodoLangGrammarParser.COMPLETE, 0); }
	public TODO(): TerminalNode { return this.getToken(TodoLangGrammarParser.TODO, 0); }
	public STRING(): TerminalNode { return this.getToken(TodoLangGrammarParser.STRING, 0); }
	public EOL(): TerminalNode { return this.getToken(TodoLangGrammarParser.EOL, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TodoLangGrammarParser.RULE_completeExpression; }
}


